--- a/vignettes/split_by_time_slice.Rmd
+++ b/vignettes/split_by_time_slice.Rmd
@@ -33,3 +33,53 @@ The mathematical core of this application is in two functions, the `draw_paramet
 3. Add back the ability to restrict the computation to a single country, to a few years.
 
 4. Check the input parameters to ensure they match the new computation.
+
+
+# Narrative Fiddling
+```{r}
+library(globalrc)
+library(futile.logger)
+library(rprojroot)
+# flog.threshold(DEBUG)
+improved_errors()
+```
+We need to specify an input version. Those files are in `~/data/projects/globalrc/inputs/AM_medians/`, and I see `201029`.
+
+```{r}
+test_toml <- rprojroot::is_r_package$find_file("inst/testdata/rc_kappa.toml")
+config_arg <- paste0("--config=", test_toml)
+args <- check_args(arg_parser(config_arg))
+paste(c("config", args$config))
+```
+
+```{r}
+rampdata::initialize_workflow(args$config)
+options <- configr::read.config(args$config)[["options"]]
+
+# What can be done and which part we choose to do.
+paste(c("in-version", args$inversion))
+paste(c("country", args$country))
+paste(c("years", args$years))
+available <- globalrc:::available_data(args$inversion, args$country, args$years)
+```
+```{r}
+load_extent <- available$domain_extent
+year <- available$years[1]
+data <- globalrc:::load_data(args$config, args$pr2ar, load_extent, year)
+```
+
+```{r}
+test_toml <- rprojroot::is_r_package$find_file("inst/testdata/rc_kappa.toml")
+config_arg <- paste(
+  paste0("--config=", test_toml),
+  "--draws=2"
+)
+args <- globalrc::check_args(globalrc:::arg_parser(config_arg))
+res <- slice_funcmain(args)
+```
+```{r}
+  multiyear <- lapply(res, function(s) {
+    dim(s) <- c(1, dim(s))
+    s
+  })
+```
