--- a/vignettes/split_by_time_slice.Rmd
+++ b/vignettes/split_by_time_slice.Rmd
@@ -35,58 +35,30 @@ The mathematical core of this application is in two functions, the `draw_paramet
 4. Check the input parameters to ensure they match the new computation.
 
 
-# Narrative Fiddling
-```{r}
-library(globalrc)
-library(futile.logger)
-library(rprojroot)
-# flog.threshold(DEBUG)
-improved_errors()
-```
-We need to specify an input version. Those files are in `~/data/projects/globalrc/inputs/AM_medians/`, and I see `201029`.
+# Example of Running the Code
 
-```{r}
-test_toml <- rprojroot::is_r_package$find_file("inst/testdata/rc_kappa.toml")
-config_arg <- paste0("--config=", test_toml)
-args <- check_args(arg_parser(config_arg))
-paste(c("config", args$config))
-```
-
-```{r}
-rampdata::initialize_workflow(args$config)
-options <- configr::read.config(args$config)[["options"]]
-
-# What can be done and which part we choose to do.
-paste(c("in-version", args$inversion))
-paste(c("country", args$country))
-paste(c("years", args$years))
-available <- globalrc:::available_data(args$inversion, args$country, args$years)
-```
-```{r}
-load_extent <- available$domain_extent
-year <- available$years[1]
-data <- globalrc:::load_data(args$config, args$pr2ar, load_extent, year)
-```
-
-```{r}
+This example runs the code from a script. The `slice_funcmain()` function will always load the whole map, one year at a time, and perform calculations on that year.
+```{r, eval = FALSE}
 library(futile.logger)
 library(globalrc)
 test_toml <- rprojroot::is_r_package$find_file("inst/testdata/rc_kappa.toml")
 config_arg <- paste(
   paste0("--config=", test_toml),
-  "--draws=3"
+  "--draws=3",
+  "--years=2001:2001"
 )
 args <- globalrc::check_args(globalrc:::arg_parser(config_arg))
 res <- globalrc:::slice_funcmain(args)
 ```
-```{r}
-  multiyear <- lapply(res, function(s) {
-    dim(s) <- c(1, dim(s))
-    s
-  })
-  globalrc:::write_output(
-    multiyear, years, available$domain_dimensions, available$domain_extent,
-    args, options
-    )
 
-```
+# Memory Problems
+
+Rewriting the `main()` for this code reminded me why I didn't write it this way in the first place. Memory usage is a problem. When we sent the code to MAP, they had trouble running the multi-process version of the code because it wanted more than 500 GB. We can explain this: If the image is 1600 x 1800 pixels (the size of MAP's Africa section), and we do 100 draws, we save an image for each draw, and each draw saves about eight variables as outputs. Each pixel is a double, which is 8 bytes, so that's at least 17 GB for a single year. Given that this is R, expect memory use to be five times this. If the map is of the whole world, or if we want to compute all years on the same machine, or if we want to use 1000 draws, then we face memory problems.
+
+There are a couple of ways around this. We can either break the work into smaller pieces, or we can reduce memory usage of the basic algorithm. The first solution is _already implemented._ This code can be run in a distributed mode which splits each tile into many spatial domains, each of which is computed in a separate process. This solution is exact.
+
+Alternatively, we can make the single-process computation work with an inexact algorithm to compute quantiles without storing all of the draws. There are several such algorithms, and they use between O(1) and O(sqrt(n)) of the draws. Here are some references to start:
+
+ * Liechty, John C and Lin, Dennis K. J. and McDermott, James P., "Single-pass low-storage arbitrary quantile estimation for massive datasets," Statistics and Computing 13, 91-100, 2003.
+ 
+ * Jain, Raj and Chlamtac, Imrich, "The $P^2$ algorithm for dynamic calculation of quantiles and histograms without storing observations," Communications of the ACM: Simulation Modeling and Statistical Computing, 28, 70, 1076-1085, 1985.
